some changes to the poster. not done yet

--- a/transport/doc/multimat_2015/content/discretization.tex
+++ b/transport/doc/multimat_2015/content/discretization.tex
@@ -20,3 +20,5 @@ temporal discretization schemes are used, such as explicit Euler:
    \mathbf{M}^C\frac{\mathbf{U}^{n+1}-\mathbf{U}^n}{\Delta t}
      + \mathbf{A}\mathbf{U}^n = \mathbf{b}^n.
 \end{equation}
+
+and 3rd-order SSP explicit methods.
