--- a/transport/doc/multimat_2015/poster.tex
+++ b/transport/doc/multimat_2015/poster.tex
@@ -10,7 +10,7 @@
 \setlength{\tabcolsep}{2em}
 
 % title, author, and institution
-\title{\fontsize{100pt}{1em}\selectfont\hspace{-3em} An Explicit, Positive CFEM Scheme Based on FCT}
+\title{\fontsize{99pt}{1em}\selectfont\hspace{-3em} A Positivity-preserving Scheme for Radiation Transport}
 \author{\begin{tabular}{c c c}
   Jean C. Ragusa       & Jean-Luc Guermond      & Joshua E. Hansel\\
   jean.ragusa@tamu.edu & guermond@math.tamu.edu & joshhansel@tamu.edu\\
@@ -86,7 +86,7 @@
     \vspace{-\parskip}
     \input{content/introduction}
   }
-  \block{\centering DISCRETIZATION}{
+  \block{\centering CFEM DISCRETIZATION}{
     \setlength{\parskip}{0.5\baselineskip}
     \vspace{-\parskip}
     \input{content/discretization}
