--- a/transport/doc/multimat_2015/content/conclusions.tex
+++ b/transport/doc/multimat_2015/content/conclusions.tex
@@ -1,4 +1,6 @@
-The numerical solutions obtained by this scheme
+The numerical solutions \underline{\bf using FCT for radiation transport} exhibit the following properties. 
+
+Solutions 
 \begin{itemize}
   \item are guaranteed non-negative
   \item are not guaranteed to be monotone, but rarely not monotone in practice
@@ -6,9 +8,11 @@ The numerical solutions obtained by this scheme
   \item are 2nd-order accurate
 \end{itemize}
 
+\bigskip
+
 Current and future work includes
 \begin{itemize}
-  \item implicit time discretizations
-  \item conservation law \emph{systems}
+  \item \underline{\bf FCT for radiation transport implicit time discretizations}
+  \item conservation law \emph{systems} (e.g., shallow water)
 \end{itemize}
 
