--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -11,7 +11,15 @@
 \usepackage{appendix}
 \usepackage{tamuconfig}
 \usepackage{rotating}
+\usepackage{color}
+\usepackage{alltt}
+\usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage[hidelinks]{hyperref}
+
+% input user-defined commands
+\input{content/newcommands}
+\input{content/mathenvironments}
 
 \begin{document}
 
